-- 0.9.2
- BugFix: When editing a QSO the name was not shown.
- BugFix: STX_String field was not always imported properly.
- BugFix: Fixed a minor bug in log table regarding the prop_mode foreign key.
- KLog is able to import QSOs with no BAND field if FREQ field is present.
- KLog offers the user a default value if RST_TX or RST_RX field is not present when importing.
- GUI: Added some shortcuts in the preference widget.
- Support of realtime upload, modification & removal of a single QSO from ClubLog.org.
- Updated the DB with the PROP_MODE options.
- GUI: Added a Propagation Mode Combobox.
- GUI: Prop_Mode combobox automatically goes to SAT if sat name or sat mode are defined

April-2015 - 0.9.1.1
- Bugfix: Editing a QSO with satellite data was not properly done and caused some errors.

April-2015 - 0.9.1
- Bugfix: Fixed DataBase::getBandIdFromFreq it was not ansswering properly.
- Now checks if band & frequency are coherent before adding a QSO. Band wins.
- All Satellite QSO include the PROP_MODE ADIF tag to make it compatible with LOTW.
- Improved the DXMarathon code.
- GUI: Added basic Satellite support.
- GUI: It is possible to mark a QSL sent via bureau/direct & DX QSL as requested with one action from Search box.
- GUI: KLog request a valid QRZ and at least one first logtype to start using it.
- KLog supports the management of several logs, being possible to edit, remove and select the one to use.

January-2015 - 0.9.0.3
- Bugfix: ADIF was not properly imported when Fields where using the Type of data optional field preventing logs from Logger32 being imported. (TNX EB1TR)
- Bugfix: QSL Sent/Received status in the search box were switched.
- Bugfix: CTY.CSV was not updated if the file was already existing.
- Bugfix: Entity DB was not updated when CTY.CSV was updated.
- Bugfix: Search results showed the default Station Callsign if non was in the QSO. This lead to errors if QRZ was not the default.
- KLog recognizes now .ADIF files (instead of only .ADI).